# mesh_localize

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  README.md  mainpage.dox  manifest.xml  massif.out.23856  package.xml
analysis/: ComputeLocalizationErrors.m  matchnearest.m  matchnearest2.m  quat2rpy.m  quatinv.m  quatmultiply.m  quatrotate.m  rpy2quat.m
cfg/: ogre.cfg
cmake/Modules/: FindGCOP.cmake  FindObjectRenderer.cmake
data/cheezit/: depth000.xml  depth001.xml  depth002.xml  depth003.xml  depth004.xml  depth005.xml  depth006.xml  depth007.xml  pose000.xml  (+40 more)
launch/: gazebo.launch  gazebo_campus.launch  gazebo_debug.launch  localize.launch  localize_box_ogre.launch  localize_box_ogre_debug.launch  localize_box_ogre_test.launch  localize_box_ogre_valgrind.launch  localize_campus_fabmap.launch  localize_campus_matching.launch  localize_car.launch  localize_cheezit_ogre.launch  localize_cheezit_ogre_imu.launch  localize_cheezit_ogre_quad.launch  localize_debug.launch  localize_lab.launch  localize_lab_fabmap.launch  localize_lab_matching.launch  localize_lab_ogre.launch  localize_pringles_ogre.launch  map_localize.rviz  map_localize.rviz.vcg  mesh_localize.rviz  mesh_localize.rviz.vcg  mesh_localize_rosserial.launch  rviz.launch
map_localize/: .gitignore  CMakeLists.txt  package.xml
ogre_cfg/: resources.cfg
src/: .Triangulation.cpp.swp  ASiftDetector.cpp  CameraContainer.cpp  Common.cpp  DepthFeatureMatchLocalizer.cpp  EdgeTrackingUtil.cpp  FABMAPLocalizer.cpp  FeatureMatchLocalizer.cpp  FindCameraMatrices.cpp  GazeboLocalizer.cpp  IMUMotionModel.cpp  ImageDbUtil.cpp  KLTTracker.cpp  KeyframeContainer.cpp  KeyframeMatch.cpp  MapFeatures.cpp  MapLocalizer.cpp  MeshLocalizer.cpp  OgreImageGenerator.cpp  PnPUtil.cpp  PointCloudImageGenerator.cpp  Triangulation.cpp  gazebo_localize_node.cpp  lsh.cpp  main.cpp  map_localize_node.cpp  mesh_localize_node.cpp  render_node.cpp
worlds/: campus.world  campus.world~  car_terrain.world  car_terrain.world~  lab_cage.world  lab_cage.world~
(+44 files in other folders)
